# fft-synth

./: .gitignore  .hgignore  ChangeLog.md  README.md  cabal.project  fft-synth  fft-synth.cabal  package.yaml
app/: Main.hs
genfft/: .gitignore  Makefile  c.ml  gen_notw.ml  gen_notw_complex.ml  gen_twiddle.ml  gen_twiddle_complex.ml  genutil.ml  magic.ml  opencl.ml
lit/: fft-synth.md  fpga.md
public/: index.html  style.css
scripts/: cooley-tukey.scm  run-tests.scm  test-chez.scm  weave
src/: AST.hs  Array.hs  Codelet.hs  GenFFT.hs  Lib.hs  Synthesis.hs  TwiddleFactors.hs
test/: Spec.hs
