cabal-version:  2.0
name:           fft-synth
version:        0.1.0.0
description:    
homepage:       https://github.com/NLeSC-AAA2/fft-synth#readme
bug-reports:    https://github.com/NLeSC-AAA2/fft-synth/issues
author:         Johan Hidding
maintainer:     j.hidding@esciencecenter.nl
copyright:      2019-2020 Netherlands eScience Center
license:        GPL-3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/NLeSC-AAA2/fft-synth

library
  exposed-modules:
      Array
      AST
      Codelet
      GenFFT
      Lib
      Synthesis
      TwiddleFactors
  other-modules:
      Paths_fft_synth
  hs-source-dirs:
      src
  default-extensions: OverloadedStrings FlexibleContexts FlexibleInstances ScopedTypeVariables NamedFieldPuns
  build-depends:
      arithmoi ^>= 0.10
    , base >=4.7 && <5
    , containers ^>= 0.6.2.1
    , mtl ^>= 2.2.2
    , process ^>= 1.6.7.0
    , text ^>= 1.2.4.0
    , vector ^>= 0.12.0.3
  default-language: Haskell2010

executable fft-synth
  main-is: Main.hs
  other-modules:
      Paths_fft_synth
  hs-source-dirs:
      app
  default-extensions: OverloadedStrings FlexibleContexts FlexibleInstances ScopedTypeVariables NamedFieldPuns
  ghc-options: -threaded -rtsopts -with-rtsopts=-qg
  build-depends:
      arithmoi ^>= 0.10
    , base >=4.7 && <5
    , containers ^>= 0.6.2.1
    , fft-synth
    , mtl ^>= 2.2.2
    , process ^>= 1.6.7.0
    , text ^>= 1.2.4.0
    , vector ^>= 0.12.0.3
  default-language: Haskell2010

test-suite fft-synth-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_fft_synth
  hs-source-dirs:
      test
  default-extensions: OverloadedStrings FlexibleContexts FlexibleInstances ScopedTypeVariables NamedFieldPuns
  ghc-options: -threaded -rtsopts -with-rtsopts=-qg
  build-depends:
      arithmoi
    , base >=4.7 && <5
    , containers
    , fft-synth
    , hspec
    , mtl
    , process
    , text
    , vector
  default-language: Haskell2010
